--- a/VRChat/39/1343639.html
+++ b/VRChat/39/1343639.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NOieMNCjpkhYId0+eXdeh3m4g8Ju9bWix3mw/lA0LVo="></script>
+    "E/K6c8uie+5jREZXJPqOWTXwptfDQ7NwUTulEcpSDQg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ぽてこ」","description":"■モデル説明\n本モデルはHumanoid形式のオリジナル３Dモデル『ぽてこ』\"POTEKO\"です。\nVRchatでの使用を想定しています。\n\nポニーテールのヒトガタの子です。\n\n\n※フルボディトラッキングでの動作は確認しておりません\nLip Sync：20種　　MMD（あいうえお）+VRChat標準（15種）\nEyeTracking対応ダミーシェイプ付き\nDynamic Bone対応（髪、耳、胸、尻尾）\n・表情アニメーションオーバーライド7種\n　設定済み\n・瞬きアニメーション設定済み\n・その他表情モーフあり\n・Dynamic bone 　設定済\n・Arktoon-Shaders　設定済\n・VRCSDK　設定済\n\n【同梱ファイル】\n・Arktoon-Shaders(Synqark様)\nアニメ調のシェーダーです。BOOTにて公開中です。\nhttps://booth.pm/ja/items/1027997\n使い方→ https://synqark.github.io/Arktoon-Shaders-Doc/\n\n■内容物\nモデルファイル(.blend + .fbx)\nUnityパッケージファイル(.unitypackage)\nテクスチャファイル(.png)\nREADME（利用規約）+更新履歴","url":"https://booth.pm/ja/items/1343639","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1343639/73bc0b26-43e3-4d77-89be-2f6aed5bb1bc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NOieMNCjpkhYId0+eXdeh3m4g8Ju9bWix3mw/lA0LVo="></script>
+    nonce="E/K6c8uie+5jREZXJPqOWTXwptfDQ7NwUTulEcpSDQg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -560,9 +560,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
