--- a/VRChat/67/1343767.html
+++ b/VRChat/67/1343767.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "0T+iT56l9jEjdsyuaLoFpZbJ+XurRTrapu/vsUnTnwc="></script>
+    "qhvo1W4a9XweefJeILGRDQwU7SexQfWfk9wRRIxUlzo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"薔薇結晶","description":"「薔薇の女王の結末は、晶らか輝きて訪れる。」\n\n\n\nVRCアバター想定の、装飾用アクセサリーです。\n今宵は少し華やかに飾ってみてはいかがでしょう？\n\n\n\n2021/8/14\nUnity2019.4.29f1への移行に関するアップデートを行いました。\n内容物に変更はございません。\n\n\n以下、詳細情報です。\n・ポリ数は三角ポリ計算で2,679です。\nまた、開花verの方は3,766です。\n・マテリアル数は1です。\n・シェーダーはArktoon-shaders-1.0.2.6を使用してます\n・テクスチャ未使用なので、Unityだけで自分好みの色に変えることができます。\n・セットアップ済みのUnitypackageを同封してあるので、簡単に使用することができます\n\n\n本モデルはVN3license\nhttps://www.dropbox.com/s/hik3f8qrz80u4sp/dl=0\nを使用しています。予めご確認ください。","url":"https://booth.pm/ja/items/1343767","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/349a8044-900f-4d75-8a5f-8b91bc035644/i/1343767/1e6bdf7d-48eb-45de-a0eb-920f8308b5ed_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0T+iT56l9jEjdsyuaLoFpZbJ+XurRTrapu/vsUnTnwc="></script>
+    nonce="qhvo1W4a9XweefJeILGRDQwU7SexQfWfk9wRRIxUlzo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -462,9 +462,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
