--- a/VRChat/42/1343742.html
+++ b/VRChat/42/1343742.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "znlFkKk2GB+8s5owRRhsb5E9fWE+lmJG9HDPlSEUV0w="></script>
+    "dhARj8vxepM30xGabK+FsxvPhQUftSpe6FqYM4FLdtE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"うみうし3D","description":"【ウミウシ3D】\n908▲\nマテリアル1\nテクスチャ1（エミッション用1）","url":"https://booth.pm/ja/items/1343742","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/1343742/3553b351-6a66-490e-96c8-b8605b65d497_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="znlFkKk2GB+8s5owRRhsb5E9fWE+lmJG9HDPlSEUV0w="></script>
+    nonce="dhARj8vxepM30xGabK+FsxvPhQUftSpe6FqYM4FLdtE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -363,9 +363,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
