--- a/VRChat/28/1343128.html
+++ b/VRChat/28/1343128.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2H0mBX7viAda4msrT79EnYIh40EkNBxZ5NkTu1oc5DM="></script>
+    "Rtw0W8/AUpjUWPzlv7JiEU9F4DncVjU0BQ3PEb0pjow="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"十字架型ブローチ","description":"VRChat用のアクセサリーです。\nまた、それ以外の用途にもご利用頂けます。\n\n内容：\nブローチ本体\nマテリアル2種類\n\n本モデルの改変は自由ですが著作権は『熊右衛門』にあります。\n再配布、販売は絶対におやめください。\n\n何かありましたら\nhttps://twitter.com/kumaemonhonpo78\nまでご連絡頂けると助かります。","url":"https://booth.pm/ja/items/1343128","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9fcdf65b-9eef-480e-a02b-6205f703f942/i/1343128/ad31eb50-c16a-466f-9eed-c1d2a2b1669d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2H0mBX7viAda4msrT79EnYIh40EkNBxZ5NkTu1oc5DM="></script>
+    nonce="Rtw0W8/AUpjUWPzlv7JiEU9F4DncVjU0BQ3PEb0pjow="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
