--- a/VRChat/61/1342861.html
+++ b/VRChat/61/1342861.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1APtSvZHO2R6FeJHj8D4HI5UlKdL1ffH/RQNcER7eSk="></script>
+    "NbRsHyHXhwwTrKeQ9CAPYn4KNm394EYPtlzg1bHb/a4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ドロワーズ｜#VRoid","description":"乙女の嗜みであるドロワーズです。\n様々な装いに合わせられるよう3色ご用意しました。\n\nVRoid Studioのズボンで使用する想定で製作しています。\n\n1色のドロワーズにはドロワーズ本体と同じ色の腹部リボンが付属します。\nドロワーズのみをインポートしてシンプルなドロワーズにすることもできますし、ドロワーズとリボンをインポートしてリボン付きのドロワーズにすることもできます。\n\n特典版には全てのドロワーズ（腹部リボン含）とピンク、ブルー、レッドの3色の腹部リボンが付属します。\nお好みの生地とお好みのリボンを組み合わせればかわいらしく特別なドロワーズを演出できます。\n\nミニ丈のドロワーズはこちらです。\nミニドロワーズ\nhttps://yui-noe.booth.pm/items/1592557\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1342861","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1342861/eecc2976-1769-4715-b345-f085b2d6e730_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1APtSvZHO2R6FeJHj8D4HI5UlKdL1ffH/RQNcER7eSk="></script>
+    nonce="NbRsHyHXhwwTrKeQ9CAPYn4KNm394EYPtlzg1bHb/a4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -824,9 +824,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
