--- a/VRChat/14/1342714.html
+++ b/VRChat/14/1342714.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VqHn8lyC26WvgOyiAVKl/cxlQRAxyI9crgGH/rO36K4="></script>
+    "l8WNYy6W+CcUKieN5Icb+lBMbLMhPAqZhGYGwYG6OKY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター「フリーフォールを設置できるカラスアバター」【オリジナル3Dモデル】","description":"VRChatでの使用を想定したハンドサインのロックンロールで目の前にフリーフォールを設置できるカラスのアバターです。\n\n・改変可。カラスのアバターを他のアバターに差し替えても構いません。\n・フリーフォールのみを自作ワールドに設置してもかまいません。\n・ペデスタル設置やpublic設定やアバタークローン許可設定や再配布等をしたい場合は私に相談してください。\n・フルトラ対応\n・本体は4000ポリゴン程度\n・リップシンク対応（シェイプキー名はMMD準拠）\n・瞬きやいくつかの表情差分あり\n・髪の毛や尻尾を揺らすには別途ダイナミックボーンを購入して自分で設定してください\n・フリーフォールの合計６個の椅子に他のユーザーに座ってもらうことができます。\n（※本人は乗れません）\n・UnityやVRChatのバージョン更新により動作しなくなる可能性もありますのでご了承ください。\n・また、特定のワールドでは正常に動作しない場合がありますのでご了承ください。\n・その他質問等があれば私のTwitterアカウントに連絡してください。\n\n修正 2019/05/15\nアニメーションのパス名を修正し忘れていたので修正しました。\n既にDLしていただいた6名の方、更新版をご希望でしたら、お手数ですが再DLまたは連絡をお願いします。","url":"https://booth.pm/ja/items/1342714","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/9e8313ff-66da-4565-a550-3c52fa584cb9/i/1342714/8d50376a-6852-435b-ad1e-469fd5f3bd06_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VqHn8lyC26WvgOyiAVKl/cxlQRAxyI9crgGH/rO36K4="></script>
+    nonce="l8WNYy6W+CcUKieN5Icb+lBMbLMhPAqZhGYGwYG6OKY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -475,9 +475,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
