--- a/VRChat/52/1342652.html
+++ b/VRChat/52/1342652.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "KEDrGHkRKatyQbZReXuJ6be1oGOCyux2z8cLvgTw/YA="></script>
+    "guXzGnOHzuDmaPfjY4i7s+NGTapVtNMr0xIyHst9efc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【 無料】三角帽子Tricorne「キャプテン」ーVRC向け3Ｄモデル","description":"VRChat向け3Dモデル\n\n「今日から、私はキャプテンになる」\n\nーーーーーーーーーーーーーーーーーーーーーーーーーーーー\n\n‐改変、改造　可\n‐world public avatar 可\n\n-再配布　禁止\n-宗教、政治、他人中傷を目的の利用　禁止\n\nーーーーーーーーーーーーーーーーーーーーーーーーーーーー\n注意：\n\n·ARKtoonを使います\n\n\n\n内容物：\nTricorne.fbx\nTricorne.unity\nTricorne.unitypackage\nTricorne.prefab\nTextureファイル\nMaterialsファイル\n説明.png","url":"https://booth.pm/ja/items/1342652","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c905a162-a49f-4411-90a6-10962a90af54/i/1342652/3f4df07e-85c0-4529-99a4-284e322131ce_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KEDrGHkRKatyQbZReXuJ6be1oGOCyux2z8cLvgTw/YA="></script>
+    nonce="guXzGnOHzuDmaPfjY4i7s+NGTapVtNMr0xIyHst9efc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -493,9 +493,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
