--- a/VRChat/30/1342330.html
+++ b/VRChat/30/1342330.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rLsKhs2jvWCmHxdyE+5iHQltehp18h27fzVivEvXWDU="></script>
+    "mr+Wza408FXilcN0QEH6MNAgClqVsluhFvLLl44HX7M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ノートパソコン","description":"ノートPC FBX, Unity, VRChat\n\nUnityPackage, FBX, テクスチャ(カラー, ノーマル, メタリック)同梱 VRChat利用可\n1024x1024と2048x2048の2種類の解像度のテクスチャを同梱しています。\n\n三角ポリゴン700 商用利用可 再配布・再販売禁止","url":"https://booth.pm/ja/items/1342330","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/6f4a060a-a42f-458c-b5e0-773070fc56d0/i/1342330/6458a55c-7602-406e-acf2-d2293b2a79cb_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rLsKhs2jvWCmHxdyE+5iHQltehp18h27fzVivEvXWDU="></script>
+    nonce="mr+Wza408FXilcN0QEH6MNAgClqVsluhFvLLl44HX7M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -374,9 +374,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
